src/components/home/home.module.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    overflow-x: hidden;
}

.article {
    width: 100vw;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
    top: calc(60px);
}




.welcome {
    width: 100vw;
    max-width: 100%;
    height: 520px;
    background: linear-gradient(90deg, #25b3e9 0%, #310e92 100%);
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.welcomeContain {
    width: 20%;
}

.welcomeTitle {
    color: #fff;
    font-family: "Candal";
    font-size: 3em;
    letter-spacing: 2px;
}

.welcomeSubtitle {
    text-align: center;
    color: #C2C2C2;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

.imageContainer {
    display: flex;
    max-width: 600px;
    align-self: flex-start;
}

.welcomeImage {
    max-width: 100%;
}

.skew {
    width: 100vw;
    max-width: 100%;
    height: 100px;
    position: absolute;
    background:#ffffff;
    bottom: -1px;
    clip-path: polygon(100% 0, 0 100%, 100% 100%);
}

@keyframes back {
    0% {
        background-position: 0 50%;
    }
    50% {
        background-position: 100% 50%;    
    }
    100% {
        background-position: 0% 50%;    
    }
}





@media only screen and (max-width: 800px) {
    
    .article {
        top: 50px;
    }

    .welcome {
        flex-direction: column;
        height: 400px;
        max-width: 100vw;
    }

    .imageContainer{
        max-width: 400px;
        align-self: center;
    }

    .skew {
        clip-path: polygon(100% 70%, 0 100%, 100% 100%);
    }

    .welcomeContain {
        width: 40%;
        text-align: center;
    }

    .welcomeTitle {
        font-size: 1.3em;
        margin-bottom: 8px;
    }
}


@font-face {
    font-family: "Candal";
    src: url(../../Fonts/Candal-Regular.ttf);
}

